# Dew-Language

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cpp-gtest.yml
include/: interpreter.h  interpreter_error.h  math_utils.h  math_wrapper.h  print.h  system.h  timer_utils.h  unix_utils.h  unix_wrapper.h
src/: a.out  error_handling.cpp  interpreter.cpp  interpreter_error.cpp  math_utils.c  math_wrapper.cpp  print.cpp  system.c  timer_utils.c  unix_utils.c  unix_wrapper.cpp
tests/: math_utils_test.cpp
